--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,15 +21,16 @@ a:hover {
 }
 
 .main-area{
+    padding: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .two-buttons{ 
-    padding: 5px 15px 5px 15px; 
+    padding: 10px 20px 10px 20px; 
     border-width: 0;
-    background-color: #f8f9fa;
+    background-color: #4e53582d;
 }
 
 .two-buttons:hover{
@@ -39,14 +40,16 @@ a:hover {
 .search-bar{ 
     width: 600px;
     border-radius: 25px;
-    height: 40px;
+    height: 45px;
     border-width: 1px;
     border-color: rgb(199, 188, 188);
+
     border-style: solid;
+    /*Border-style is inset by default on textboxes. Hence the weird two-tone.*/
 }
 
 .search-bar:hover{
-    box-shadow: 0 0 4px;
+    box-shadow: 0 0 3px 0px rgb(206, 205, 205);
 }
 
 .search-bar:focus{
