--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,3 +55,11 @@ a:hover {
 .search-bar:focus{
     outline: none;
 }
+
+.magglass{
+    position: relative;
+    height: 25px;
+    width: 25px;
+    left: 50px;
+    top: 8px;
+}
