--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,8 +58,16 @@ a:hover {
 
 .magglass{
     position: relative;
+    height: 21px;
+    width: 21px;
+    left: 50px;
+    top: 6px;
+}
+
+.g-mic{
+    position: relative;
     height: 25px;
     width: 25px;
-    left: 50px;
-    top: 8px;
+    right: 45px;
+    top: 9px;
 }
