--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,17 +9,20 @@ a {
 
 ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 a:hover {
     text-decoration: underline;
 }
 
-.top-nav {
-    display: flex;
-    flex-direction: row;
+.top-nav li{
+    /*Inline block allows setting width and height, but elements can
+    still sit next to each other. Creates nav links.*/
+    display: inline-block;
+    padding-left: 15px;
 }
-
 .main-area{
     padding: 100px;
     display: flex;
