--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ ul {
 
 a:hover {
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .top-nav {
@@ -49,7 +50,7 @@ a:hover {
 }
 
 .search-bar{ 
-    width: 600px;
+    width: 400px;
     border-radius: 25px;
     height: 45px;
     border-width: 1px;
@@ -81,4 +82,28 @@ a:hover {
     width: 25px;
     right: 45px;
     top: 9px;
+}
+
+.footer{
+    background-color: rgb(228, 225, 225);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.footer li, .footer-right li {
+    display: inline-block;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: small;
+
+}
+
+.footer-right {
+    float: right;
+    position: absolute;
+    bottom: 0;
+    right: 15px;
 }
