--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,9 +34,7 @@ a:hover {
 
 .main-area{
     padding: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
 
 .two-buttons{ 
